--- a/Solr20101119/lt/Makefile
+++ b/Solr20101119/lt/Makefile
@@ -2,5 +2,5 @@ pdf:
 	rst2pdf -s ja,nyo index.rst -o "lt.pdf"
 
 s5:
-	rst2s5 --theme small-black index.rst index.html
+	rst2s5.py --theme small-black index.rst index.html
 
