add a presentation of dev environment.

--- a/Clojure20121021/Makefile
+++ b/Clojure20121021/Makefile
@@ -1,6 +1,6 @@
 .SUFFIXES:	.md .html
 
-all: index.html
+all: index.html haruyama.html
 
 .md.html:
 	pandoc -S -s -f markdown -t slidy -V slidy-url=slidy $< | sed 's/slidy\.js\.gz/slidy.js/' > $@
