add clean target

--- a/sicp_20130307/Makefile
+++ b/sicp_20130307/Makefile
@@ -2,9 +2,12 @@ mds=$(wildcard *.md)
 htmls=$(mds:.md=.html)
 
 .SUFFIXES:	.md .html
-.PHONY: all
+.PHONY: all clean
 
 .md.html:
 	pandoc -S -s -f markdown -t slidy -V slidy-url=slidy $< | sed 's/slidy\.js\.gz/slidy.js/' > $@
 
 all: $(htmls)
+
+clean:
+	rm -rf *~
